@@ -94,3 +94,7 @@ http://stupidpythonideas.blogspot.com/2014/09/sockets-and-multiprocessing.html
 https://curl.haxx.se/mail/lib-2014-09/0070.html
 https://github.com/fl4re/curl/blob/master/lib/curl_sasl_sspi.c
 https://github.com/mongodb-labs/winkerberos/issues/19
+
+Thank you to the following contributors as well for their PRs:-
+
+https://github.com/ccbur
